--- a/methodtest.html
+++ b/methodtest.html
@@ -7,7 +7,8 @@
 </head>
 
 <body>
-    <form id="httpForm" action="#">
+    <h1>hello there</h1>
+    <!-- <form id="httpForm" action="#">
         <label for="id">ID:</label>
         <input type="number" id="id" name="id" /><br>
 
@@ -27,7 +28,7 @@
         <button id="deleteBtn">DELETE</button>
     </form>
     <!-- <script src="./script/methodtest.js"></script> -->
-    <script type ="module" src="./script/main.js"></script>    
+    <script type ="module" src="./script/main.js"></script>     -->
 
 </body>
 
